--- a/cricket-api/pom.xml
+++ b/cricket-api/pom.xml
@@ -29,12 +29,14 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<!-- Updated MySQL connector dependency -->
 		<dependency>
 			<groupId>com.mysql</groupId>
