--- a/cricket-api/src/main/resources/application.yml
+++ b/cricket-api/src/main/resources/application.yml
@@ -14,6 +14,16 @@ spring:
       port: 6379
   cache:
     type: redis
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
+    shutdown:
+      enabled: true
 
 server:
   port: 8088
